--- a/source/_posts/彼岸花与会说话的金表-第一章.md
+++ b/source/_posts/彼岸花与会说话的金表-第一章.md
@@ -28,7 +28,7 @@ $$
 $$
 站台上站满了人，一个学生边从家长手中拿过行李，还边和同学吹嘘着什么；一个红头发的人和一个戴着眼镜的人说笑着，看着他们的孩子登上列车；一个一年级新生不停和父母道别，但是父母却有交代不完的事情。泷奈和千束穿过熙熙攘攘的人群，走上了列车。走了好多节车厢，两人才找到一个空的隔间，坐了进去。
 
-刚放好自己的包，隔间中又走进来了一个女孩，他看起来十分年幼，似乎只有八、九岁的样子。那女孩说道：“别的隔间都满了，我可以坐这儿吗？”千束笑着回答道：“当然！”说着，把泷奈拉到自己这边，为那个女孩腾出了空。“谢谢。”那女孩道了声谢，开始往行李架上放自己的行李。见女孩放好了东西，千束急忙问道：“你好呀，我叫锦木千束，你叫什么名字呀？”女孩迟疑了一下，说道：“胡桃。”“哇，好名字呀，胡桃！”千束感叹道，听得泷奈想假装不认识这个家伙。千束指向泷奈，说到：“这是泷奈。”“你好，我是井上泷奈。”泷奈微微点头，向胡桃打招呼道。“你好。”胡桃也向泷奈微微点了点头。说罢，从行李中掏出了一个笔记本电脑，架在了桌子上。
+刚放好自己的包，隔间中又走进来了一个女孩，他看起来十分年幼，似乎只有八、九岁的样子。那女孩说道：“别的隔间都满了，我可以坐这儿吗？”千束笑着回答道：“当然！”说着，把泷奈拉到自己这边，为那个女孩腾出了空。“谢谢。”那女孩道了声谢，开始往行李架上放自己的行李。见女孩放好了东西，千束急忙问道：“你好呀，我叫锦木千束，你叫什么名字呀？”女孩迟疑了一下，说道：“胡桃。”“哇，好名字呀，胡桃！”千束感叹道，听得泷奈想假装不认识这个家伙。千束指向泷奈，说到：“这是泷奈。”“你好，我是井上泷奈。”泷奈微微点头，向胡桃打招呼道。“你好。”胡桃也向泷奈微微点了点头。说罢，从背包中掏出了一个笔记本电脑，架在了桌子上。
 
 “诶？”千束疑惑道，笔记本电脑她在博正的办公室见过，是一种可以计算和搜索很多东西的机器，但绝对和魔法没有半点关系。“学魔法还需要用到电脑吗？”她向胡桃提出了自己的疑问。胡桃合上了笔记本，答道：“这是我老师研究出来的魔法。”“这也是魔法吗？”泷奈也被勾起了兴趣，问道。“是的，”胡桃答道，“这是老师研究了十余年的成果，融合了占卜学、魔咒学和变形学等多科的尖端成就。”“哇，”千束感叹道，“你老师是谁呀？”“那维莱特。”“那维莱特？”千束疑惑道，她似乎没听过这个名字，不过这也是应当的，毕竟一个月前她也不认识米卡和泷奈。胡桃却对千束的反应很震惊，说道：“你不知道那维莱特教授吗？”千束茫然地摇了摇头，沉默了好久的泷奈却说道：“我知道。霍格沃茨校长，那维莱特教授。”
 
@@ -36,4 +36,17 @@ $$
 
 “胡桃，你还知道什么别的吗？”千束吃着刚买来的蛋糕，向胡桃问道。胡桃把笔记本电脑往自己那边拉了拉，似乎是怕千束摆在桌子上的蛋糕在列车的颠簸中与电脑来个亲密接触，随后她将头从屏幕后伸出来，说道；“那看你想听什么了。”
 
-从出发到现在接近两个小时的路程中，千束一直在问个不停。她们从霍格沃茨的四个学院谈到普通巫师等级考试，从魔法部的组成谈到第二次巫师战争，无论千束提出什么千奇百怪的问题，胡桃总能回答出来。“胡桃什么都懂，真的很厉害。”泷奈夸赞道。胡桃笑了笑，拍了拍自己的电脑，说道：“这都要靠它。”“这么说，”泷奈说道，“胡桃的信息全是从那个电脑中查出来的吗？”“当然不是，”胡桃摇了摇头，否认道，“或者说，不完全是。”“那是怎么回事呢？”还没等泷奈接着问，千束便迫不及待地说道。可还没等胡桃回答，门外就传来了叫卖的声音：“蛋糕，巧克力蛙，三明治，比比多味豆……”千束扭头看向泷奈——米卡见千束成天蹦蹦跶跶的，便把给她们准备的旅费全交给了泷奈。泷奈一扭头，看见千束揉着肚子，直勾勾地看着自己，便明白了她是什么意思。泷奈说道：“我马上回来。”，便推门走了出去。没过一会，她便提了一个蛋糕和一兜其他零食走回了隔间。“好耶！”千束开心地扑向食物，拿起一块蛋糕就开吃，把对面的胡桃吓了一跳，泷奈却似乎对这种场景已经见怪不怪了，安静地坐在座位上，说道：“胡桃也来一块吃吧。”刚从震惊中缓过来的胡桃道了声谢，接过了泷奈递过去的蛋糕，边吃，还边用余光瞥了几眼千束
+从出发到现在接近两个小时的路程中，千束一直在问个不停。她们从霍格沃茨的四个学院谈到普通巫师等级考试，从魔法部的组成谈到第二次巫师战争，无论千束提出什么千奇百怪的问题，胡桃总能回答出来。“胡桃什么都懂，真的很厉害。”泷奈夸赞道。胡桃笑了笑，拍了拍自己的电脑，说道：“这都要靠它。”“这么说，”泷奈说道，“胡桃的信息全是从那个电脑中查出来的吗？”“当然不是，”胡桃摇了摇头，否认道，“或者说，不完全是。”“那是怎么回事呢？”还没等泷奈接着问，千束便迫不及待地说道。可还没等胡桃回答，门外就传来了叫卖的声音：“蛋糕，巧克力蛙，三明治，比比多味豆……”千束扭头看向泷奈——米卡见千束成天蹦蹦跶跶的，便把给她们准备的旅费全交给了泷奈。泷奈一扭头，看见千束揉着肚子，直勾勾地看着自己，便明白了她是什么意思。泷奈说道：“我马上回来。”，便推门走了出去。没过一会，她便提了一个蛋糕和一兜其他零食走回了隔间。“好耶！”千束开心地扑向食物，拿起一块蛋糕就开吃，把对面的胡桃吓了一跳，泷奈却似乎对这种场景已经见怪不怪了，安静地坐在座位上，说道：“胡桃也来一块吃吧。”刚从震惊中缓过来的胡桃道了声谢，接过了泷奈递过去的蛋糕，边吃，还边用余光瞥了几眼千束。
+
+铁轨奔驰从一望无际的田野上穿过，红色的列车奔驰在花香中。远处，被云雾半遮着的山峰直冲云端，以高傲的姿态俯视着山下的一切。泷奈将视线从窗外的美景移向车内，问道：“胡桃，我们大概还要多久才能到呀？”“应该快了。”胡桃答道，“到之前列车员会提醒我们的。”泷奈点了点头，“嗯嗯。”胡桃合上电脑，将它放回了自己的背包中，扭头问道：“火车已经坐烦了吗？”“那倒不是，”泷奈否认道，“只是想快点到学校。”“这样啊。”胡桃点点头，缓缓说道：“话说，你们两个是从哪里来的呀？”“从哪里来的吗……”泷奈说着，又看向了窗外，千束却不等泷奈说出下一句话，抢着说道：“我来讲我来讲。”泷奈扭头看了一眼千束，无奈地微笑了一下，说道：“那让千束讲吧。”
+
+“……就这样，我们就坐上了今天的列车，见到了胡桃你啦！”千束讲了近半个小时，终于讲完了这一个月发生的事。胡桃若有所思的点了点头，说道：“这么说，你们是米卡教授的学生。”泷奈也点了点头，答道：“是的，一个月前是老师亲自把我们从日本接过来的。”胡桃又说到：“那你们一定会米卡教授自己研究的魔法吧。”“老师自己研究的魔法？”千束疑惑道，“老师没有向我们提过。”胡桃似乎有些失望，点了点头，说道：“这样啊……”“老师的研究是什么呢？”泷奈提问道。胡桃正了正坐姿，答道：“这个说来话长了。”
+
+“十几年前，两个天才从霍格沃茨毕业了。在 O.W.L 和 N.E.W.T，即普通巫师等级考试和终极巫师考试中，他们各个科目均名列前茅，尤其是他们的麻瓜研究科目，特别优秀。毕业之后，他们便开始着手进行自己的研究。也是在他们的推动和努力下，三年之后，《合理利用麻瓜物品法》正式颁布，他们也是当今为数不多的持有‘麻瓜物品研究证’的人——拥有这个执照的人才能合法地进行麻瓜物品的施法与利用。在那之后，两人便回到了自己的母校霍格沃茨，继续他们的研究——魔法与麻瓜物品的结合。米卡教授所擅长的，是空间魔法和枪械的结合；而老师所擅长的，是生命魔法与麻瓜的计算设备——计算机的结合。”说着，胡桃又从包中掏出了笔记本电脑，“这是 Walnut，老师的最新研究成果。在魔法的加持下，它的计算性能能达到麻瓜的最新型号的几万倍。更重要的是，它拥有了智慧，能够进行自主学习。在不间断的学习下，它的知识储备已经覆盖了魔法界 98% 以上的领域。”看着那个 Walnut 背后的松鼠图案，千束感叹道：“这么厉害，怪不得你什么都知道。”胡桃笑了笑，说道：“开学后，米卡教授应该也会教你们他的独创技艺，你们就好好期待吧。”“那老师的魔法是什么样的呀？”千束迫不及待地问道。“这我就不知道了，”胡桃摇了摇头，答道，“老师也没向我具体讲过米卡教授的研究。”“它也不知道吗？”泷奈指了指 Walnut，问道。胡桃说道：“Walnut 只能自主搜索公共区域的知识，这种私人信息，它也不知道。”泷奈遗憾地点了点头，又看向了窗外。
+
+太阳闪耀着最后的光芒，晚霞为西边的天空穿上了一片红色的外衣。特快列车的灯开了，列车员也开始喊道：“马上要到了，请同学们换好长袍，把行李留在车上，我们会帮助你们搬到宿舍。”
+
+“快到了，我们换衣服吧。”胡桃说着，从行李中拿出了长袍。泷奈也从行李中取出了她和千束的长袍。三人换好了长袍，火车也缓缓减速，停在了站台边。泷奈扭头看向窗外，只见站台牌上写着：
+$$
+\mathcal{Hogsmeade}
+$$
