--- a/source/_posts/彼岸花与会说话的金表-第一章.md
+++ b/source/_posts/彼岸花与会说话的金表-第一章.md
@@ -46,7 +46,17 @@ $$
 
 太阳闪耀着最后的光芒，晚霞为西边的天空穿上了一片红色的外衣。特快列车的灯开了，列车员也开始喊道：“马上要到了，请同学们换好长袍，把行李留在车上，我们会帮助你们搬到宿舍。”
 
-“快到了，我们换衣服吧。”胡桃说着，从行李中拿出了长袍。泷奈也从行李中取出了她和千束的长袍。三人换好了长袍，火车也缓缓减速，停在了站台边。泷奈扭头看向窗外，只见站台牌上写着：
+“快到了，我们换衣服吧。”胡桃说着，从行李中拿出了长袍。泷奈也从行李中取出了她和千束的长袍。三人换好了长袍，火车也缓缓减速，停在了站台边。泷奈扭头看向窗外，站台牌上写着：
 $$
 \mathcal{Hogsmeade}
 $$
+
+### 3
+
+千束、泷奈和胡桃走出隔间，与其他学生一同下了火车。刚到站台上，随着一阵风朝他们扑过来，一个响亮的声音也随之传来：“一年级新生，这边走！”千束和泷奈扭头望去，一个高大的身影正在那边挥着手。“他……也太高了吧。”泷奈感叹道，胡桃应道：“这是保护神奇动物课的鲁伯·海格教授，他是一名混血巨人。”“巨人？原来巨人就是这样的呀。”千束摇了摇头，巨人只有这点身高这件事不是很符合她的预期。见状，胡桃又说到：“真正的巨人要比他高得多，毕竟海格教授只有一半的巨人血统。”“这样啊……”千束笑了笑，说道，“那我们赶快过去吧。”
+
+她们三人走了过去，在海格教授的指引下坐上了一艘船。所有的新生都到齐了，海格也自己坐上了一艘船——他的身躯太大了，能装下三四个学生的船似乎都装不下他。“出发咯！”随着海格的呼喊，一艘艘船只离开了岸边，朝着霍格沃茨驶去。在周围的一片黑暗中，霍格沃茨城堡的灯光是格外的耀眼，它们与点点星光呼应着，交织着，在水面上漂浮着。小船驶过湖面，泛起了一阵阵涟漪，扰动了湖中平静的浮星。下了船之后，海格领着学生们来到了大门前，那里站着一位身着棕色长袍的教授——米卡。
+
+海格微笑着向米卡打了声招呼，米卡也报以微笑，说到：“谢谢你海格，接下来就交给我吧，或许你在出席晚宴前需要去换一身衣服？”海格点了点头，又和米卡说了几句，便离开了。米卡领着一年级新生走进了霍格沃茨城堡，在一个大厅中，他停下来了脚步，扭头向新生们说道：“欢迎你们大家来到霍格沃茨，我是副校长，也是黑魔法防御课的老师，米卡。很高兴看到你们没有缺胳膊少腿地走进了学校城堡。”听到后面那句话，千束惊慌地看向泷奈，小声又兴奋说道：“老师是什么意思，难道我们刚才也遇到了什么致命的危险，只是海格教授帮我们解决了吗。”泷奈无奈地翻了个白眼，答道：“老师显然是在开玩笑，你电影看多了吧。”千束失望地笑了笑，把头扭了回去。“在你们正式进入霍格沃茨上课之前，需要为你们分配学院。”米卡接着说道，“霍格沃茨有四个学院，它们分别是：格兰芬多，赫奇帕奇，拉文克劳，斯莱特林。你们在霍格沃茨就读的 7 年里，学院就如同你们的家，你们的每个优秀表现都有可能给学院加分，同样，犯的错误也会给学院扣分。每个学院都有自己的长处，但无论是哪个学院，都是同样优秀的，都能够将你们培养成优秀的巫师。在分院仪式开始前还有些时间，请大家在这里稍等一会。”说罢，他便扭头走进了旁边的大门。
+
+等待的时间里，所有学生都安静地站着，他们有的脸上露出紧张的神色，似乎在担心自己会分进什么学院；有的却一脸坦然，似乎对于自己会分入什么学院早有预期。千束和泷奈显然属于前者，他们紧张地说些什么，又不停地向胡桃问些什么。
