--- a/source/_posts/彼岸花与会说话的金表-第一章.md
+++ b/source/_posts/彼岸花与会说话的金表-第一章.md
@@ -60,3 +60,5 @@ $$
 海格微笑着向米卡打了声招呼，米卡也报以微笑，说到：“谢谢你海格，接下来就交给我吧，或许你在出席晚宴前需要去换一身衣服？”海格点了点头，又和米卡说了几句，便离开了。米卡领着一年级新生走进了霍格沃茨城堡，在一个大厅中，他停下来了脚步，扭头向新生们说道：“欢迎你们大家来到霍格沃茨，我是副校长，也是黑魔法防御课的老师，米卡。很高兴看到你们没有缺胳膊少腿地走进了学校城堡。”听到后面那句话，千束惊慌地看向泷奈，小声又兴奋说道：“老师是什么意思，难道我们刚才也遇到了什么致命的危险，只是海格教授帮我们解决了吗。”泷奈无奈地翻了个白眼，答道：“老师显然是在开玩笑，你电影看多了吧。”千束失望地笑了笑，把头扭了回去。“在你们正式进入霍格沃茨上课之前，需要为你们分配学院。”米卡接着说道，“霍格沃茨有四个学院，它们分别是：格兰芬多，赫奇帕奇，拉文克劳，斯莱特林。你们在霍格沃茨就读的 7 年里，学院就如同你们的家，你们的每个优秀表现都有可能给学院加分，同样，犯的错误也会给学院扣分。每个学院都有自己的长处，但无论是哪个学院，都是同样优秀的，都能够将你们培养成优秀的巫师。在分院仪式开始前还有些时间，请大家在这里稍等一会。”说罢，他便扭头走进了旁边的大门。
 
 等待的时间里，所有学生都安静地站着，他们有的脸上露出紧张的神色，似乎在担心自己会分进什么学院；有的却一脸坦然，似乎对于自己会分入什么学院早有预期。千束和泷奈显然属于前者，他们紧张地说些什么，又不停地向胡桃问些什么。
+
+过了一会，米卡回来了，
