--- a/source/_posts/彼岸花与会说话的金表-第一章.md
+++ b/source/_posts/彼岸花与会说话的金表-第一章.md
@@ -61,4 +61,5 @@ $$
 
 等待的时间里，所有学生都安静地站着，他们有的脸上露出紧张的神色，似乎在担心自己会分进什么学院；有的却一脸坦然，似乎对于自己会分入什么学院早有预期。千束和泷奈显然属于前者，他们紧张地说些什么，又不停地向胡桃问些什么。
 
-过了一会，米卡回来了，
+嘎吱一声，门开了，米卡走了回来。他手中拿着一张羊皮纸，说道：“我们现在去给你们进行分院，请大家跟我来。”说罢扭头走去。千束、泷奈便和其他新生一同，走入了礼堂。
+
