--- a/source/_posts/彼岸花与会说话的金表-第一章.md
+++ b/source/_posts/彼岸花与会说话的金表-第一章.md
@@ -14,7 +14,9 @@ top: 1
 
 咯吱一声，一阵风吹动了刚刚落下的树叶，一扇隐藏在旁边两个店铺中间的小门打开了。紧接着从里面走出来了两个女孩——锦木千束和井上泷奈。千束的眼中带着兴奋，蹦蹦跳跳地走了出来。千束走了一阵，才发现身旁没人，于是她回头望去，看见了刚刚关上门，正在仔细看着手中地图的井上泷奈。泷奈还是一如既往地带着冷静的样子，不过眼中却少了些冰冷，多了些温暖。“泷奈，快走呀！”千束边冲泷奈喊，边挥舞着手臂，似乎想快点让自己的朋友跟上来。泷奈收起地图，向前走了几步，语气中带了一丝无奈：“千束知道路吗？”“啊，这个……”千束面露了一丝尴尬，“不过泷奈刚才看了那么长时间地图，一定知道路了吧。”见泷奈点了点头，千束便扭头向前：“那我们出发吧！”说着，边又向前一蹦一跳地走去。泷奈拉住了千束，指了指身后：“走错了，是那边。”
 
-一个月前，米卡领着两人去对角巷买了需要的物品和衣服。这也是两人第一次真正接触魔法世界。买完学习需要的东西后，米卡还送给了两人一人一个棕色的包。千束当时接过包，谢了谢老师，还想到：这么小的包，怎么能装下书呢。不料打开包之后，里面的空间却比她们住的那个屋子还大。千束露出惊讶的神色，抬头看向米卡，米卡却像早就料到千束会这样一般笑了笑，示意两人背上包。背上包之后，两人突然感觉肩膀被书包带勒紧了，紧接着便自动调整到了合适的位置。那天晚上，千束把自己的所有东西，甚至还有泷奈的所有东西都装进了自己的包里，但是粗略观察下，包中至少还剩下一半空间。装了那么多东西，包却没有变得更沉。那个包似乎还能能读取使用者的意念，想取出东西的时候不用翻找，只要一想，所想之物便会自动出现在包口。现在，两人的所有用品都装在各自的包里面。
+一个月前，米卡领着两人去对角巷买了需要的物品和衣服。这也是两人第一次真正接触魔法世界。当然，最重要的还是魔杖：樱桃木，12.8 英寸，凤凰尾羽——属于锦木千束；冬青木，13.2英寸，凤凰尾羽——属于井上泷奈。从两人拿上这两根魔杖开始，对角巷的唯一一家魔杖店，奥利凡德魔杖店的店主奥利凡德先生，就睁大了双眼，惊讶地看着两人，嘴里还喃喃自语道：“又是这样……”千束感到有些疑惑不解，便问道：“奥利凡德先生，我们的魔杖有什么问题吗？”奥利凡德意味深长地看了一眼千束，又看了一眼泷奈，说道：“你们魔杖的凤凰尾羽来自同一只凤凰。这只凤凰的尾羽一共只做出过 4 根魔杖，你们手中的是最后两根。”他顿了顿，看向米卡，继续说道：“米卡教授应该知道前两根魔杖的去处。”千束和泷奈扭头看向米卡，只见米卡也一脸思索，朝着奥利凡德点了点头。千束见两人都不说话，又向米卡问道：“老师，奥利凡德先生说的是什么意思呀？”不等米卡回答，奥利凡德就接着说道：“两位传奇！虽然有一位办的不是人事，但毕竟也是大事……”说着说着，他的声音又低了下去。千束还想问点什么，但却被米卡的声音打断了：“奥利凡德先生，我应该付给您多少钱？”奥利凡德扭过头，像是突然惊醒了一般，说道：“啊……二十加隆。”米卡从包中掏出几枚金币，交给了奥利凡德，带着千束泷奈离开了。
+
+买完学习需要的东西后，米卡还送给了两人一人一个棕色的包。千束当时接过包，谢了谢老师，想到：这么小的包，怎么能装下书呢。不料打开包之后，里面的空间却比她们住的那个屋子还大。千束露出惊讶的神色，抬头看向米卡，米卡却像早就料到千束会这样一般，笑了笑，示意两人背上包。背上包之后，两人突然感觉肩膀被书包带勒紧了，紧接着便自动调整到了合适的位置。那天晚上，千束把自己的所有东西，甚至还有泷奈的所有东西都装进了自己的包里，但是粗略观察下，包中至少还剩下一半空间。装了那么多东西，包却没有变得更沉。那个包似乎还能能读取使用者的意念，想取出东西的时候不用翻找，只要一想，所想之物便会自动出现在包口。现在，两人的所有用品都装在各自的包里面。
 
 从那天起的一个月以来，米卡隔一天过来给千束和泷奈上一节课。经过一个月，千束和泷奈已经基本了解了各个魔法学科的区别，还有一些基础的知识。她们也学会了第一个咒语：$\mathscr{Lumos}$，能让魔杖尖端发光。在练习这个咒语的时候，泷奈尝试了两次就让魔杖尖端发出了光，千束却试了好多次才让魔杖上面蒙蒙亮。米卡却并没有责怪千束，只是笑了笑，说道：“没事的，多练习总能成功的。”
 
@@ -57,9 +59,14 @@ $$
 
 她们三人走了过去，在海格教授的指引下坐上了一艘船。所有的新生都到齐了，海格也自己坐上了一艘船——他的身躯太大了，能装下三四个学生的船似乎都装不下他。“出发咯！”随着海格的呼喊，一艘艘船只离开了岸边，朝着霍格沃茨驶去。在周围的一片黑暗中，霍格沃茨城堡的灯光是格外的耀眼，它们与点点星光呼应着，交织着，在水面上漂浮着。小船驶过湖面，泛起了一阵阵涟漪，扰动了湖中平静的浮星。下了船之后，海格领着学生们来到了大门前，那里站着一位身着棕色长袍的教授——米卡。
 
-海格微笑着向米卡打了声招呼，米卡也报以微笑，说到：“谢谢你海格，接下来就交给我吧，或许你在出席晚宴前需要去换一身衣服？”海格点了点头，又和米卡说了几句，便离开了。米卡领着一年级新生走进了霍格沃茨城堡，在一个大厅中，他停下来了脚步，扭头向新生们说道：“欢迎你们大家来到霍格沃茨，我是副校长，也是黑魔法防御课的老师，米卡。很高兴看到你们没有缺胳膊少腿地走进了学校城堡。”听到后面那句话，千束惊慌地看向泷奈，小声又兴奋说道：“老师是什么意思，难道我们刚才也遇到了什么致命的危险，只是海格教授帮我们解决了吗。”泷奈无奈地翻了个白眼，答道：“老师显然是在开玩笑，你电影看多了吧。”千束失望地笑了笑，把头扭了回去。“在你们正式进入霍格沃茨上课之前，需要为你们分配学院。”米卡接着说道，“霍格沃茨有四个学院，它们分别是：格兰芬多，赫奇帕奇，拉文克劳，斯莱特林。你们在霍格沃茨就读的 7 年里，学院就如同你们的家，你们的每个优秀表现都有可能给学院加分，同样，犯的错误也会给学院扣分。每个学院都有自己的长处，但无论是哪个学院，都是同样优秀的，都能够将你们培养成优秀的巫师。在分院仪式开始前还有些时间，请大家在这里稍等一会。”说罢，他便扭头走进了旁边的大门。
+海格微笑着向米卡打了声招呼，米卡也报以微笑，说到：“谢谢你海格，接下来就交给我吧，或许你在出席晚宴前需要去换一身衣服？”海格点了点头，又和米卡说了几句，便离开了。米卡领着一年级新生走进了霍格沃茨城堡，在一个大厅中，他停下来了脚步，扭头向新生们说道：“欢迎你们大家来到霍格沃茨，我是副校长，也是黑魔法防御课的老师，米卡。很高兴看到你们没有缺胳膊少腿地走进了学校城堡。”听到后面那句话，千束惊慌地看向泷奈，小声又兴奋说道：“老师是什么意思，难道我们刚才也遇到了什么致命的危险，只是海格教授帮我们解决了吗。”泷奈无奈地翻了个白眼，答道：“老师显然是在开玩笑，你电影看多了吧。”千束失望地笑了笑，把头扭了回去。“在你们正式进入霍格沃茨上课之前，需要为你们分配学院。”米卡接着说道，“霍格沃茨有四个学院，它们分别是：格兰芬多，赫奇帕奇，拉文克劳，斯莱特林。你们在霍格沃茨就读的 7 年里，学院就如同你们的家，你们的每个优秀表现都有可能给学院加分，同样，犯的错误也会给学院扣分。每个学院都有自己的长处，但无论是哪个学院，都是同样优秀的，都能够将你们培养成优秀的巫师。等一会，我们会再分院仪式上通过考验你们，将你们分入合适的学院。当然，在分院仪式开始前还有些时间，请大家在这里稍等一会。”说罢，他便扭头走进了旁边的大门。
 
 等待的时间里，所有学生都安静地站着，他们有的脸上露出紧张的神色，似乎在担心自己会分进什么学院；有的却一脸坦然，似乎对于自己会分入什么学院早有预期。千束和泷奈显然属于前者，他们紧张地说些什么，又不停地向胡桃问些什么。
 
 嘎吱一声，门开了，米卡走了回来。他手中拿着一张羊皮纸，说道：“我们现在去给你们进行分院，请大家跟我来。”说罢扭头走去。千束、泷奈便和其他新生一同，走入了礼堂。
 
+千束和泷奈从未见过如此富丽堂皇的礼堂——抬头望去，一望无际的苍穹笼罩着整个礼堂，星空下是数以万计的蜡烛，漂浮在半空中，点点荧光流水一般倾斜而下，金色的光晕沉淀在这古老而庄重的建筑中。礼堂的尽头是一扇巨大的玻璃窗，彩色的玻璃错落有致地拼接着，钻石一般散射着蜡烛的光芒，晶莹而又耀眼。教师席上坐着的诸位教授都神情凝重地看向新生，尤其是坐在中央的那位白发的教授——他交叉着手放在身前的桌子上，仔细打量着新生们，似乎对新生们充满了期望。“那就是那维莱特教授吧。”泷奈拉了拉千束，说道。“是的。”胡桃听到了两人的谈话，扭过头说道。众人的前方放着一个凳子，凳子上有一顶皱巴巴的帽子，米卡就站在那个帽子旁边，手里拿着刚才那张羊皮纸，似乎在等着什么。千束拍了拍胡桃，问道：“那顶帽子就是我们要经过的考验吗？我们要干什么呢？”可不等胡桃回答， 前方就传来了一声清嗓子的声音。胡桃扭过头去，千泷二人也和其他新生一样，赶忙向前看去，只见那顶帽子的边上渐渐裂出一个嘴一般的缝隙，唱到：
+
+>哦，霍格沃茨。
+>
+>
