--- a/source/_posts/彼岸花与会说话的金表-第一章.md
+++ b/source/_posts/彼岸花与会说话的金表-第一章.md
@@ -65,8 +65,46 @@ $$
 
 嘎吱一声，门开了，米卡走了回来。他手中拿着一张羊皮纸，说道：“我们现在去给你们进行分院，请大家跟我来。”说罢扭头走去。千束、泷奈便和其他新生一同，走入了礼堂。
 
-千束和泷奈从未见过如此富丽堂皇的礼堂——抬头望去，一望无际的苍穹笼罩着整个礼堂，星空下是数以万计的蜡烛，漂浮在半空中，点点荧光流水一般倾斜而下，金色的光晕沉淀在这古老而庄重的建筑中。礼堂的尽头是一扇巨大的玻璃窗，彩色的玻璃错落有致地拼接着，钻石一般散射着蜡烛的光芒，晶莹而又耀眼。教师席上坐着的诸位教授都神情凝重地看向新生，尤其是坐在中央的那位白发的教授——他交叉着手放在身前的桌子上，仔细打量着新生们，似乎对新生们充满了期望。“那就是那维莱特教授吧。”泷奈拉了拉千束，说道。“是的。”胡桃听到了两人的谈话，扭过头说道。众人的前方放着一个凳子，凳子上有一顶皱巴巴的帽子，米卡就站在那个帽子旁边，手里拿着刚才那张羊皮纸，似乎在等着什么。千束拍了拍胡桃，问道：“那顶帽子就是我们要经过的考验吗？我们要干什么呢？”可不等胡桃回答， 前方就传来了一声清嗓子的声音。胡桃扭过头去，千泷二人也和其他新生一样，赶忙向前看去，只见那顶帽子的边上渐渐裂出一个嘴一般的缝隙，唱到：
+千束和泷奈从未见过如此富丽堂皇的礼堂——抬头望去，一望无际的苍穹笼罩着整个礼堂，星空下是数以万计的蜡烛，漂浮在半空中，点点荧光流水一般倾斜而下，金色的光晕沉淀在这古老而庄重的建筑中。礼堂的尽头是一扇巨大的玻璃窗，彩色的玻璃错落有致地拼接着，钻石一般散射着蜡烛的光芒，晶莹而又耀眼。教师席上坐着的诸位教授都神情凝重地看向新生，尤其是坐在中央的那位白发的教授——他交叉着手放在身前的桌子上，仔细打量着新生们，似乎对新生们充满了期望。“那就是那维莱特教授吧。”泷奈拉了拉千束，说道。胡桃听到了两人的谈话，扭过头道：“是的。”众人的前方放着一个凳子，凳子上有一顶皱巴巴的帽子，米卡就站在那个帽子旁边，手里拿着刚才那张羊皮纸，似乎在等着什么。千束拍了拍胡桃，问道：“那顶帽子就是我们要经过的考验吗？我们要干什么呢？”可不等胡桃回答， 前方就传来了一声清嗓子的声音。胡桃扭过头去，千泷二人也和其他新生一样，赶忙向前看去，只见那顶帽子的边上渐渐裂出一个嘴一般的缝隙，唱到：
 
->哦，霍格沃茨。
+>我不是一顶美丽的帽子，
 >
+>但我一定是你见过的最聪明的帽子。
 >
+>一千多年前，霍格沃茨刚刚创立，
+>
+>四位创始人将他们的思想注入于我。
+>
+>我是分院帽，负责将你分进正确的学院。
+>
+>也许，你的心底埋藏着真正的勇气，
+>
+>临危不惧，勇往直前，
+>
+>那么格兰芬多将是你最好的去处；
+>
+>也许，你一直都坚韧，诚实，
+>
+>不畏艰辛，正直忠诚，
+>
+>那么赫奇帕奇将会把你拥入怀中；
+>
+>也许，你的头脑超乎常人地精明，
+>
+>睿智博学，聪明伶俐，
+>
+>那么拉文克劳欢迎着你；
+>
+>也许，你的心中从来不缺少渴望，
+>
+>目标明确，不惜一切，
+>
+>那么斯莱特林会助你攀上顶峰。
+>
+>千余年来，我从未失手，
+>
+>你的任何小心思都逃不过我的眼睛，
+>
+>戴上我吧，我将领你进入正确的学院！
+
+随着来自学生和教师们的掌声，唱完歌的分院帽弯曲着帽子尖端，向四周各微微鞠了个躬。米卡也鼓了鼓掌，等到掌声逐渐停歇，米卡清了清嗓子：“咳咳。我们现在开始分院，请被我念到名字的同学们走上前来，戴上分院帽分院，分院后前往学院的餐桌。”说着，他指了指下面的四张长桌，上面分别写着四个学院的名字，“第一位是，码崴·亚利。”队伍前方走出了一个戴着眼镜，梳着平头的男生，走向米卡。米卡拿起分院帽，示意他坐在凳子上，接着将分院帽戴在男生头上。一阵沉默后，分院帽大声喊道：“拉文克劳！”拉文克劳的长桌上爆发出一阵掌声，男生摘下帽子向学院餐桌走去。
