--- a/source/_posts/彼岸花与会说话的金表-第一章.md
+++ b/source/_posts/彼岸花与会说话的金表-第一章.md
@@ -107,4 +107,10 @@ $$
 >
 >戴上我吧，我将领你进入正确的学院！
 
-随着来自学生和教师们的掌声，唱完歌的分院帽弯曲着帽子尖端，向四周各微微鞠了个躬。米卡也鼓了鼓掌，等到掌声逐渐停歇，米卡清了清嗓子：“咳咳。我们现在开始分院，请被我念到名字的同学们走上前来，戴上分院帽分院，分院后前往学院的餐桌。”说着，他指了指下面的四张长桌，上面分别写着四个学院的名字，“第一位是，码崴·亚利。”队伍前方走出了一个戴着眼镜，梳着平头的男生，走向米卡。米卡拿起分院帽，示意他坐在凳子上，接着将分院帽戴在男生头上。一阵沉默后，分院帽大声喊道：“拉文克劳！”拉文克劳的长桌上爆发出一阵掌声，男生摘下帽子向学院餐桌走去。
+随着来自学生和教师们的掌声，唱完歌的分院帽弯曲着帽子尖端，向四周各微微鞠了个躬。米卡也鼓了鼓掌，等到掌声逐渐停歇，米卡清了清嗓子：“咳咳。我们现在开始分院，请被我念到名字的同学们走上前来，戴上分院帽分院，分院后前往学院的餐桌。”说着，他指了指下面的四张长桌，上面分别写着四个学院的名字。
+
+“第一位是，码崴·亚利。”队伍前方走出了一个戴着眼镜，梳着平头的男生，走向米卡。米卡拿起分院帽，示意他坐在凳子上，接着将分院帽戴在男生头上。一阵沉默后，分院帽大声喊道：“拉文克劳！”拉文克劳的长桌上爆发出一阵掌声，男生摘下帽子向学院餐桌走去。紧接着，一个又一个学生有条不紊地分院，除了有一名赫奇帕奇的学生分院的时候紧张的颤抖，让分院帽从头上滑了下来。队伍中的人越来越少，最后只剩下了胡桃，千束和泷奈三人。
+
+“胡桃。”米卡喊出胡桃的名字，然后不经意地撇了一眼坐着的校长。胡桃向前走去，在她戴上帽子后不久，分院帽就喊道：“拉文克劳！”胡桃摘下帽子，在掌声中向餐桌走去。米卡扭过头来，带着笑容看向千泷二人，喊道：“井上泷奈。”
+
+泷奈绕过千束，
