--- a/source/_posts/洛谷省选计划-做题记录.md
+++ b/source/_posts/洛谷省选计划-做题记录.md
@@ -1,9 +1,55 @@
 ---
-title: 洛谷省选计划 做题记录
+title: SNOI 前 做题记录
 date: 2023-11-27 09:08:17
 tags: 做题记录
 secret: 08020923@Chisato&&Takina
-description: 洛谷省选计划 做题记录
+description: SNOI 前 做题记录，包含一些 洛谷省选计划 的题。
 ---
 
-TEST洛谷省选计划 做题记录
+# SNOI 前 做题记录
+
+## T402404 星辰
+
+对于一个排列 $P$，它的逆排列 $P'$ 满足 $P'{p_i}=i$，显然，对合排列的逆排列为其本身。
+
+对于原排列 $P$ 中的任意一组逆序对 $(i,j),(p_i,p_j)$，满足 $i<j,p_i>p_j$，其在 $P'$ 中唯一对应一组逆序对 $(p_j,p_i),(j,i)$。则我们可以对于所有的逆序对为 $k$ 的排列，同时删除当前存在的所有**非对合排列**，同时保证数量奇偶性不变。因此，**逆序对个数为 $k$ 的对合排列的奇偶性，就是逆序对个位数为 $k$ 的排列的奇偶性**。
+
+考虑 DP，枚举填了 $t$ 个数，令 $f_{k}$ 表示考虑前 $t$ 个数（$1,2,\dots t$），现在有 $k$ 个逆序对的方案数，则由于 $t>t-1>\dots>1$，所以枚举 $t$ 的位置，可得：
+$$
+f_{k}=\sum_{i=k-t+1}^{k}f_{i}
+$$
+记 $m=\frac{n(n-1)}{2}$，直接 DP 是 $O(n^2m)$ 的。进行前缀和优化为 $O(nm)$。
+
+考虑第 $t$ 轮转移，实际上是先进行前缀和 $f_i=f_{i-1}+f_{i}$，然后令 $f_i=f_{i}-f_{i-t}$。考虑 $f$ 的生成函数 $F$，则实际上是：
+
+$$
+F_t=(\sum_{i=0}^{\infty}x_i)(1-x^{t})F_{t-1}=\frac{1}{1-x}(1-x^{t})F_{t-1}
+$$
+边界为 $F_0=1$，则：
+$$
+F_n=\prod_{t=1}^{n}\frac{1}{1-x}(1-x^{t})\\
+=\frac{1}{(1-x)^n}\prod_{t=1}^{n}(1-x^{t})\\
+=(\sum_{i=0}{{n+i-1}\choose{i}}x_i)\prod_{t=1}^{n}(1-x^t)
+$$
+考虑卢卡斯定理：
+
+$$
+{n\choose{m}}\pmod{p}={\lfloor\frac{n}{p}\rfloor\choose{\lfloor\frac{m}{p}\rfloor}}{n\operatorname{mod} p\choose{m \operatorname{mod} p}}\pmod{p}
+$$
+则对于 $p=2$，${{n}\choose{m}} \equiv 1 \pmod{p}$ 当且仅当 $n\&m=m$，即 $n$ 的二进制表示是 $m$ 的超集。
+
+于是可以快速计算出  $\sum_{i=0}{{n+i-1}\choose{i}}x_i$，对于后面的乘积，由于答案对 $2$ 取模，可以用 ```bitset``` 优化。
+
+时间复杂度为 $O(\frac{nm}{w})$。
+
+--------------------------------------------
+
+## CF1883G2 Dances (Hard Version)
+
+答辩题面，看了好久才懂。虽然之前好像嘴过（
+
+当 $a_1$ 不变的时候，显然可以二分出答案。
+
+考虑 $a_1$ 的变化对答案的影响，当 $a_1$ 很小的时候，答案与 $a_1=1$ 的时候相同。当 $a_1=1$ 时候的答案不合法的时候，只要多删一个就能合法，因此，总的答案段数只有至多两段，且答案分别为 $ans(a_1=1),ans(a_1=1)+1$。
+
+二分出这个分界点，每次 $check$ 的时候再套一层二分就行了，时间复杂度 $O(n\log n\log m)$。 
