--- a/source/_posts/NOI2024-前-做题记录.md
+++ b/source/_posts/NOI2024-前-做题记录.md
@@ -50,3 +50,11 @@ Ex Hall 定义：
 先考虑第一问，使用网络流。记网络流的源点、汇点为 $S,T$，将网络流求最大匹配的连边改为 从 $S$ 往外连边容量为 $2$，往 $T$ 连边容量为 $2$ 。注意到这样最后方案可能会是一些环或链，但是任何环或者链都可以切成若干个长度小于等于 $3$ 的链。
 
 再考虑第二问，在第一问的基础上，我们可以给边一个费用。先将容量为 $2$ 的边分开成 $2$ 条，然后将每一个点（左部或右部点）和 $S、T$ 之间的连边中的第一条边费用设为 $-\infty$，第二条边费用设为  $1$，然后跑 **最小费用可行流**。这样，会优先使得每一个点都不是孤立点，**可行流**则会使得长度为 $3$ 的链个数最小。
+
+## CF1383F Special Edges
+
+最大流=最小割。
+
+由于 $k$ 很小，我们可以暴力枚举哪些特殊边被割掉，将被割掉的边容量设为 $0$，没被割掉的容量设为 $\infty$，总共有 $2^k$ 种情况。询问的时候通过枚举这 $2^k$ 种情况，用上述求出的最小割加上割掉的边现在的边权，求出真正的最小割即可。
+
+于是问题转化为了每次将 $1$ 条边的边权从 $0$ 调整为 $\infty$，求最大流。最开始先令所有边容量为 $0$，跑一遍最大流。对于每种情况，可以先从 $S-\operatorname{logbit}(S)$ 转移过来，然后再在残量网络上跑最大流，由于容量小于等于 $25$，可以令 $\inf=25$，然后用 **EK**来求取最小割，时间复杂度 $O(mw2^k+q2^k)$，其中最大边权 $w\le 25$。$\Huge\color{red}{卡}\color{yellow}{卡}\color{blue}{就}\color{green}{过}\color{pink}{了}$
