--- a/source/_posts/物理学习笔记.md
+++ b/source/_posts/物理学习笔记.md
@@ -90,7 +90,7 @@ T &= 1s
 $$
 于是：
 $$
-t_{AC}=2T=2s\\a=\frac{\Delta v}{T}=\frac{2}{1}=-2m/s^2
+t_{AC}=2T=2s\\a=\frac{\Delta v}{T}=\frac{-2}{1}=-2m/s^2
 $$
 
 
@@ -106,7 +106,7 @@ $$
 则：
 $$
 v_C=v_B-2=3m/s\\
-t_{CD}=\frac{\Delta v_{CD}}{a}=\frac{0-3}{-2}=1.5s
+t_{CD}=\frac{\Delta v_{CD}}{a}=1.5s
 $$
 
 
