--- a/source/_posts/物理学习笔记.md
+++ b/source/_posts/物理学习笔记.md
@@ -84,13 +84,13 @@ $$
 \begin{flalign}
 \Delta x &= aT^2\\
 \Delta x &= \Delta v T\\
-(4-6) &= -2T\\
+T &= \frac{\Delta x}{\Delta v}\\
 T &= 1s
 \end{flalign}
 $$
 于是：
 $$
-t_{AC}=2T=2s\\a=\frac{\Delta v}{T}=\frac{-2}{1}=-2m/s^2
+t_{AC}=2T=2s\\a=\frac{\Delta v}{T}=-2m/s^2
 $$
 
 
@@ -105,7 +105,7 @@ v_B &= 5m/s
 $$
 则：
 $$
-v_C=v_B-2=3m/s\\
+v_C=v_B-2m/s=3m/s\\
 t_{CD}=\frac{\Delta v_{CD}}{a}=1.5s
 $$
 
@@ -114,7 +114,6 @@ $$
 $$
 \begin{flalign}
 x_{CD} &= v_Ct_{CD}+\frac{1}{2}at_{CD}^2\\
-&= 3\times 1.5+\frac{1}{2}\times (-2)\times 1.5^2\\
 &=2.25m
 \end{flalign}
 $$
