--- a/source/_posts/物理学习笔记.md
+++ b/source/_posts/物理学习笔记.md
@@ -44,27 +44,27 @@ description: 物理学习笔记
 设匀加速运动的时间为 $t_1$，匀减速运动的时间为 $t_2$，速度最大时的速度为 $v$，则 $v=a_1t_1=a_2t_2$，即 $t_1=\frac{v}{a_1},t2=\frac{v}{a_2}$。
 于是有：
 $$
-\begin{flalign}
+\begin{aligned}
 x&=\frac{a_1t_1^2+a_2t_2^2}{2}\\
 &=\frac{1}{2}(t1+t2)v\\
-\end{flalign}
+\end{aligned}
 $$
 即：
 $$
-\begin{flalign}
+\begin{aligned}
 \frac{1}{2}(\frac{v}{a_1}+\frac{v}{a_2})v&= x\\
 \frac{1}{2}(\frac{a_2v+a_1v}{a_1a_2})v&= x\\
 v^2\frac{a_2+a_1}{2a_1a_2} &= x\\
 v^2 &= \frac{2xa_1a_2}{a_2+a_1}\\
 v &= \sqrt{\frac{2xa_1a_2}{a_2+a_1}}
-\end{flalign}
+\end{aligned}
 $$
 代入上方的式子可得：
 $$
-\begin{flalign}
+\begin{aligned}
 \frac{1}{2}(t_1+t_2)\sqrt{\frac{2xa_1a_2}{a_2+a_1}}&=x\\
 t_1+t_2 &=\sqrt{\frac{2x(a_2+a_1)}{a_1a_2}}
-\end{flalign}
+\end{aligned}
 $$
 
 
@@ -81,12 +81,12 @@ $$
 
 由 $\Delta x=aT^2,\Delta v = aT$ 可知：
 $$
-\begin{flalign}
+\begin{aligned}
 \Delta x &= aT^2\\
 \Delta x &= \Delta v T\\
 T &= \frac{\Delta x}{\Delta v}\\
 T &= 1s
-\end{flalign}
+\end{aligned}
 $$
 于是：
 $$
@@ -96,12 +96,12 @@ $$
 
 由 $v-v_0^2=2ax$ 可知：
 $$
-\begin{flalign}
+\begin{aligned}
 v_B^2-v_A^2 &= 2ax\\
 v_B^2-(v_B+2)^2 &= 2ax\\
 -4v_B-4 &= -24\\
 v_B &= 5m/s
-\end{flalign}
+\end{aligned}
 $$
 则：
 $$
@@ -112,13 +112,55 @@ $$
 
 由 $x=v_0t+\frac{1}{2}at^2$ 可知：
 $$
-\begin{flalign}
+\begin{aligned}
 x_{CD} &= v_Ct_{CD}+\frac{1}{2}at_{CD}^2\\
 &=2.25m
-\end{flalign}
+\end{aligned}
 $$
 于是：
 $$
 x_{AD}=x_{AB}+x_{BC}+x_{CD}=12.25m
 $$
 综上，$v_B=5m/s,a=-2m/s,t_{AC}=2s,s_{AD}=x_{AD}=12.25m$。
+
+## 二、相互作用——力
+
+### 一些知识点
+
+1. $g$ 的单位既可以是 $N/kg$，也可以是 $m/s^2$，而且 $1N/kg=1m/s^2$。
+2. 弹力产生的条件：
+   - 两物体接触
+   - 发生弹性形变
+3. 胡克定律：在弹性限度内，弹簧发生弹性形变时，弹力 $F$ 的大小与弹簧伸长/缩短的长度 $x$ 成正比，即：
+   $$
+   F=kx
+   $$
+   其中 $k$ 叫做弹簧的劲度系数，单位是 $N/m$。
+
+4. 滑动摩擦力的方向总是沿着接触面，并且与物体相对运动的方向相反。
+
+5. 同一接触面下，滑动摩擦力的大小与压力大小成正比，即：
+   $$
+   F_f=\mu F_压
+   $$
+   其中 $\mu$ 叫做动摩擦因数，其值与接触面有关。
+
+6. 相互接触的两个物体之间有相对运动的趋势，但并未运动，此时的摩擦力叫做静摩擦力。静摩擦力的方向与物体相对运动的方向相反，大小与使其产生相对运动趋势的力相同。
+7. 当一个物体对另一个物体施加了力，后一个物体一定同时对前一个物体也施加了力，这一对力分别称为作用力与反作用力。作用力与反作用力是互相依赖、同时存在的，因此，可以将它们两者中的任意一个称作作用力，另一个称作反作用力。
+8. 牛顿第三定律：两个物体之间的作用力和反作用力总是大小相等，方向相反，作用在同一条直线上。
+9. 平衡力作用在同一物体上，作用力与反作用力分别作用在两个物体上。
+10. 平衡力不一定是同一种类的力，作用力和反作用力一定是同一种类的力。
+11. 一个力的效果与若干个力效果相同，则这个力称作那些力的合力，那些力称作这一个力的分力。求合力称作力的合成，求分力称作力的分解。
+12. 力的合成与分解遵循平行四边形定则，其他矢量也是如此。
+13. 在共点力作用下，物体平衡的条件是合力为零。
+
+### 一些题
+
+![必修一 P77](https://pic.imgdb.cn/item/65ddd1619f345e8d03822ea2.png)
+
+沿斜面为 $x$ 轴，垂直于斜面为 $y$ 轴建立平面直角坐标系，将 $G$ 正交分解得到 $G_x$ 和 $G_y$，由小孩匀速滑下，处于平衡状态可知：
+$$
+G_x=F_f\\
+F_n=G_y
+$$
+于是，
