--- a/source/_posts/物理学习笔记.md
+++ b/source/_posts/物理学习笔记.md
@@ -163,4 +163,55 @@ $$
 G_x=F_f\\
 F_n=G_y
 $$
-于是，
+于是
+$$
+F_f=G_x=G\sin\theta=G\frac{h}{AB}\\
+F_n=G_y=G\cos\theta=G\frac{l}{AB}\\
+$$
+由 $F_f=\mu F_n$ 可知：
+$$
+\begin{aligned}
+F_f&=\mu F_n\\
+G\frac{h}{AB}&=\mu G\frac{l}{AB}\\
+\end{aligned}
+$$
+解得 $h=2.4m$。
+
+## 三、运动和力的关系
+
+### 一些知识点
+
+1. 牛顿第一定律：一切物体总保持匀速直线运动状态或静止状态，除非作用在它上面的力迫使它改变这种状态。物体保持原来匀速直线运动状态或静止状态的性质叫做惯性。
+
+2. 质量是描述物体惯性的物理量。
+
+3. 牛顿第二定律：物体减速度的大小跟它收到的作用力成正比，跟它的质量成反比，加速度的方向跟作用力的方向相同。即：$F=kma$。其中 $k$ 是比例系数，当 $F$ 的单位取 $N$，$m$ 的单位取 $kg$，$a$ 的单位取 $m/s^2$ 的时候，$k=1$。即：
+   $$
+   F=ma
+   $$
+
+4. 
+
+
+4. 当 $k=1$ 的时候，质量为 $1kg$ 的物体在某力的作用下获得 $1m/s^2$ 的加速度，则这个力 $F=ma=1kg·m/s^2=1N$。
+5. 关于牛顿第二定律 $F=ma$：
+   - 矢量性：$a$ 与 $F$ 方向相同。
+   - 瞬时性：$a$ 与 $F$ 同出现现同消失。
+   - 同体性：同一物体。
+   - 独立性：每一个 $F$ 都可以产生一个 $a$。
+   - 因果性：力是产生加速度的原因。
+   - 相对性：相对于惯性参考系。
+
+6. 一个在平面上运动的物体只受重力与摩擦力时，满足：
+   $$
+   a=\mu g
+   $$
+
+7. 
+
+7. 基本单位（如：$m,s,kg$）可以推导出导出单位（如：$m/s,m/s^2,kg·m/s^2(N)$）。
+8. 物体对支持物的压力（或对悬挂物的拉力）小于物体所受的重力，称为失重。否则称为超重。
+
+### 一些题
+
+Waiting for update
