--- a/source/_posts/物理学习笔记.md
+++ b/source/_posts/物理学习笔记.md
@@ -215,3 +215,87 @@ $$
 ### 一些题
 
 Waiting for update
+
+# 必修二
+
+## 抛体运动
+
+### 一些知识点
+
+1. 轨迹是曲线的运动称为曲线运动
+
+2. 做曲线运动的质点，其在某一点的速度方向，沿曲线在这一点的切线方向。
+
+3. 物体所受合力方向与其速度方向不在同一直线上时，物体做曲线运动。
+
+4. 由分运动求合运动的过程叫做运动的合成；反之叫做运动的分解。
+
+5. 以一定的速度将物体抛出，忽略空气阻力，若物体只受重力的作用，这时的运动叫做抛体运动；若初速度的方向是水平方向，这样的抛体运动叫做平抛运动。
+
+6. 求出平抛运动物体水平分位移、数值分位移与时间的关系后，可以得到：$y=\frac{g}{2v_0^2}x^2$，即其运动轨迹是抛物线。
+
+7. 平抛运动的水平分速度始终为 $v_x=v_0$，竖直分速度为 $v_y=gt$，则由勾股定理可知，其合速度为
+$$
+v=\sqrt{v_0^2+g^2t^2}
+$$
+
+8. 平抛运动的方向与水平分速度 $v_x$ 的夹角 $\theta$ 满足
+   $$
+   \tan\theta=\frac{v_y}{v_x}=\frac{gt}{v_0}
+   $$
+
+   ### 一些题
+
+   Waiting for update.
+
+   ## 圆周运动
+
+### 一些知识点
+
+1.圆周运动的物体，物体在极短时间内通过的弧长 $\Delta s$ 与时间 $\Delta t$ 的比值叫做物体此时的线速度，用 $v$ 表示。即
+$$
+v=\frac{\Delta s}{\Delta t}
+$$
+  其方向为物体做圆周运动时该点的切线方向。
+
+2. 若做圆周运动的物体线速度处处相等，则这种运动叫做匀速圆周运动，物体速率不变。
+
+3. 物体在 $\Delta t$ 时间内转过角 $\Delta \theta$，则物体的角速度 $\omega$ 为
+   $$
+   \omega = \frac{\Delta \theta}{\Delta t}
+   $$
+
+  角速度的单位为 弧度每秒（$rad/s$），运算中，通常省略弧度，所以角速度的单位可以写为 $s^{-1}$。
+
+4. 做匀速圆周运动的物体，运动一周所用时间叫做周期，符号为 $T$，单位是 $s$。
+
+5. 物体转动圈数 $n$ 与时间 $t$ 的比值叫做转速，单位是转每秒或其他。
+
+6. 圆周运动的物体，其线速度与角速度的关系满足：线速度大小等于角速度大小与半径的乘积，即
+   $$
+   v=\omega r
+   $$
+
+7. 做匀速圆周运动的物体所受合力总指向圆心，这个指向圆心的力叫做向心力。
+
+8. 做圆周运动的物体，其向心力的大小满足
+   $$
+   \begin{aligned}
+   F_n &= m\omega^2r\\
+   F_n &= m\frac{v^2}{r}
+   \end{aligned}
+   $$
+   
+9. 匀速圆周运动的物体，其加速度总是指向圆心，称其为向心加速度，满足：
+   $$
+   \begin{aligned}
+   a_n &= \frac{v^2}{r}\\
+   a_n &= \omega^2r
+   \end{aligned}
+   $$
+
+10. 只要作用效果是使物体产生向心加速度，其就是向心力。
+
+### 一些题
+
+Waiting for update
