--- a/source/_posts/NOI2024-前-做题记录.md
+++ b/source/_posts/NOI2024-前-做题记录.md
@@ -317,3 +317,43 @@ f(x+1)&=2f(x)-1
 \end{aligned}
 $$
 于是，我们就可以在 $O(n)$ 的时间复杂度内递推出所有的 $f(i)$，答案即为 $\displaystyle f(n-1)-\sum_{i\in S}c_i$，其中 $c_i$ 代表最开始追随 $i$ 的人数，$S$ 代表最开始被选定的点的集合。
+
+## CF1479E School Clubs
+
+同上。
+
+## P3188 [HNOI2007] 梦幻岛宝珠
+
+题意：01 背包，但是容量是 $2^{30}$，保证所有物品的体积表示为 $a\times 2^k$ 后，$a\le 10$。
+
+我们先将所有物体按体积中的 $k$ 分类，每一种分类中可以求出本类中最优方案，由 $n\le 100,a\le 10$ 可知，每一类中的总容量不会大于 $1000$。我们记种类 $i$ 中耗费 $j\times 2^i$ 的容量能获得的最大价值为 $f_{i,j}$，则对于每一类物品，$f$ 可以在 $O(|S_i|^2V)$ 的时间复杂度内用普通 01 背包求出，其中 $S_i$ 代表本类物品的集合，$V$ 代表 $a$ 的最大值。
+
+考虑从小到大枚举物品的种类，当枚举到第 $i$ 类的时候，我们最多只需要 $1000\times 2^i$ 的容量，所以背包的总容量可以和这个数字取一个 $\min$。并且对于小于 $i$ 的二进制位，它们是否有值对于当前的问题是没有意义的，因为我们已经考虑完了小于 $i$ 的所有位，当前物品所需要的最小容量也一定是大于等于 $2^i$ 的。因此，我们可以设 $g_{i,j}$ 表示考虑前 $i$ 类物品，用小于等于 $j\times2^i$ 的容量所能获取的最大价值，转移如下：
+$$
+g_{i,j}=\max_{k=0}^{\min(|S_i|V,j)}f_{i,k}+g_{i-1,(j-k)\times2+W_{i-1}}
+$$
+其中 $W_i$ 代表 $W$ 的二进制表示第 $i$ 位上的数字。最终答案即为 $g_{\log_2{W},1}$。
+
+## P3226 [HNOI2012] 集合选数
+
+对于两个数，若他们质因数分解并去掉所有的 $2,3$ 因子后不同，则它们不可能互相影响，我们将去掉所有 $2,3$ 质因数后相等的数字称作同一类数，则我们只需要对每类数求出方案后乘起来即可。
+
+将一类数列作一个网格图，每一行的的数满足右边的数是左边数的 $3$ 倍，每一列的数满足是左边数的 $2$ 倍，就可以状压 DP 了。设 $f_{i,j}$ 为考虑了前 $i$ 行，当前行选没选的状态为 $j$ 的方案数，直接枚举下一行的方案转移就行。
+
+时间复杂度上界 $O(\log_2n\times \log_3^2n)$，在预处理出每一行所有的可能状态（不考虑上下两行）后，真正的计算量远远小于这个上界。
+
+## P6246 [IOI2000] 邮局
+
+转化：钦定每一个邮局管辖一定区域，这个区域都要来这个邮局。则转化后的问题的最优解一定是原问题的最优解。
+
+于是变成了将序列划分为若干段，每一段 $[l,r]$ 有代价 $w(l,r)$，要求总代价和最小。写出 $w$ 的递推式：
+$$
+W_{l,r}=W_{l,r-1}+X_r-X_{\lfloor\frac{l+r}{2}\rfloor}
+$$
+满足四边形不等式，于是用单调队列优化决策单调性后+WQS二分之后可以做到 $O(n\log n\log V)$。
+
+## CF1217F Forced Online Queries Problem
+
+如在线问题。
+
+根据强制在线的方式，每一次只可能影响两条不同的边，我们可以先将每一条边在可能会修改它的时间打一个时间戳，就可以对应的所有时间区间搞出来。在线段树分治到一次询问的时候，我们遍历这个答案影响的所有询问，看到底某条边在下个时间区间存在还是不存在，然后继续线段树分治即可。
