--- a/source/_posts/SNOI2024-前-做题记录.md
+++ b/source/_posts/SNOI2024-前-做题记录.md
@@ -2,7 +2,7 @@
 title: SNOI前 做题记录
 date: 2023-11-27 09:08:17
 tags: 做题记录
-secret: パスワード
+secret: pa55wo3d
 description: SNOI前 做题记录，包含一些 洛谷省选计划 的题。
 ---
 
@@ -10,7 +10,7 @@ description: SNOI前 做题记录，包含一些 洛谷省选计划 的题。
 
 ## T402404 星辰
 
-对于一个排列 $P$，它的逆排列 $P'$ 满足 $P'{p_i}=i$，显然，对合排列的逆排列为其本身。
+对于一个排列 $P$，它的逆排列 $P'$ 满足 $p'_{p_i}=i$，显然，对合排列的逆排列为其本身。
 
 对于原排列 $P$ 中的任意一组逆序对 $(i,j),(p_i,p_j)$，满足 $i<j,p_i>p_j$，其在 $P'$ 中唯一对应一组逆序对 $(p_j,p_i),(j,i)$。则我们可以对于所有的逆序对为 $k$ 的排列，同时删除当前存在的所有**非对合排列**，同时保证数量奇偶性不变。因此，**逆序对个数为 $k$ 的对合排列的奇偶性，就是逆序对个位数为 $k$ 的排列的奇偶性**。
 
