--- a/source/_posts/李超线段树入门.md
+++ b/source/_posts/李超线段树入门.md
@@ -1,5 +1,5 @@
 ---
-title: 李超线段树课件
+title: 李超线段树入门
 date: 2024-12-19 10:07:13
 tags: 课件
 description: 李超线段树课件
@@ -36,3 +36,7 @@ description: 李超线段树课件
 ## 拓展
 
 如果插入的是线段，我们只需在线段定义域对应的 $O(\log n)$ 个区间中进行上述的插入步骤即可，时间复杂度 $O(\log ^2 n)$。
+
+----------------------------------
+
+愿此行，终抵群星。
