--- a/source/_posts/未命名-序章.md
+++ b/source/_posts/未命名-序章.md
@@ -35,4 +35,26 @@ description: 一段未命名的故事
 
 走过走廊，我便看到了一个静谧、精美的房间，“这里就是往生堂的大堂了，有客人来时，就可以坐在那里谈业务。”看着胡桃指向的那些桌子，桌子上还摆着一些看起来像是小零食的东西，我心中不禁怀疑到，来这里办业务的人真的会吃那些小零食吗？这个疑问我终究还是没有问出来。此时桌子边正坐着一位身材修长的儒雅男士。胡桃向我介绍道：“这就是本堂的客卿钟离先生，昨晚就是他发现了躺在草丛中的你。”我赶忙上前向钟离道谢，钟离摆了摆手说道：“无妨无妨，小事一桩，大可不必如此客气。”说罢，将头转向收拾东西的胡桃，说道：“堂主可是要再访无妄坡？”胡桃扭过头来，说道：“确实，昨晚送行的那位顾客给我说，他临行前想要再尝一下璃月港的中原杂碎，今天就去帮他了结最后的心愿吧。”钟离喝完了最后一碗茶，说道：“堂主需要我协助吗？”胡桃摇头道：“不用不用，客卿你就留在堂中等候可能回来的客户吧。”听了胡桃的话，正在起身的钟离又坐下了，说道：“那我就如胡堂主所言，在此等候。”“嗯嗯，那咱俩先去璃月港里买需要的东西吧。”胡桃看向我，轻快地说道。于是我便跟着胡桃走出了往生堂，前往璃月港。
 
-璃月港的街道干净整洁，由石板铺成的道路在晨光下反射出微微的光芒。街道两旁排列着高低错落的建筑物，充满了古色古香的韵味。街道两旁种植着各种花草树木，早晨的露珠在花瓣和叶子上闪烁。小鸟在树枝间欢快地鸣叫着，仿佛在为新的一天歌唱。我跟随胡桃的脚步走到了港口上方的广场，胡桃停下了脚步，转头对我说道：“你且在此稍等一小会，我去买中原杂碎。”“啊，好的。”我答应道。看向下方，各式各样的商铺和摊贩早已开始忙碌起来，摊位上摆满了琳琅满目的商品。河道边，一艘艘小船安静地停泊着，水面上偶尔泛起一圈圈的涟漪，显得格外宁静。不一会儿，胡桃便回来了，手中拿着三串烤串样的东西。“尝尝吧，中原杂碎，很好吃的”胡桃递给我一份，然后自己也拿起一份吃了起来。不一会，我们两个人都吃完了。“走！”随着胡桃一声令下，我们踏上了前往无妄坡的路。
+璃月港的街道干净整洁，由石板铺成的道路在晨光下反射出微微的光芒。街道两旁排列着高低错落的建筑物，充满了古色古香的韵味。街道两旁种植着各种花草树木，早晨的露珠在花瓣和叶子上闪烁。小鸟在树枝间欢快地鸣叫着，仿佛在为新的一天歌唱。
+
+我跟随胡桃的脚步走到了港口上方的广场，胡桃停下了脚步，转头对我说道：“你且在此稍等一小会，我去买中原杂碎。”看向下方，各式各样的商铺和摊贩早已开始忙碌起来，摊位上摆满了琳琅满目的商品。河道边，一艘艘小船安静地停泊着，水面上偶尔泛起一圈圈的涟漪，显得格外宁静。不一会儿，胡桃便回来了，手中拿着三串烤串样的东西。“尝尝吧，中原杂碎，很好吃的”胡桃递给我一份，然后自己也拿起一份吃了起来。不一会，我们两个人都吃完了。“走！”随着胡桃一声令下，我们踏上了前往无妄坡的路。
+
+阴云笼罩的天空下，无妄坡的景色愈发显得阴森可怖。光秃秃的树枝在寒风中摇曳，发出令人毛骨悚然的吱呀声。枯黄的落叶在地上堆积成厚厚一层，踩上去发出沙沙的响声。
+
+胡桃轻快地走在前面，手中拿着那串中原杂碎，长长的衣摆随着她的步伐飘动。她似乎对这里的环境早已习以为常，丝毫不受这阴森氛围的影响。偶尔停下脚步，抬头望向远处的山峰，仿佛在寻找着什么。
+
+浓重的雾气在山间缭绕，将远处的景色遮掩得若隐若现。空气中弥漫着一股潮湿的气息，混合着泥土和腐烂植物的味道。零星几只乌鸦在头顶盘旋，发出凄厉的叫声，更添几分诡异。
+
+"到了。"胡桃突然停下脚步，指向前方一片较为空旷的区域。那里的地面上散落着几块形状不规则的石头，杂草丛生。她将手中的中原杂碎放在一块相对平整的石头上，然后后退几步，双手合十，闭上眼睛。
+
+微风拂过，带起地上的落叶，在空中打着旋儿。胡桃的嘴唇微动，似乎在念诵着什么。忽然，一阵诡异的寒意袭来，周围的温度骤然下降。那串中原杂碎上升起一缕青烟，缓缓消散在空气中。
+
+胡桃睁开眼睛，脸上露出满意的笑容："好啦，这位客人的心愿已了。"她转身看向四周，目光在地面上搜寻着什么。"这附近就是发现你的地方，有什么感觉吗？"
+
+四周的景象确实唤起了一些模糊的记忆，但每当试图抓住那些片段时，它们就像雾一样消散。远处的山峰若隐若现，仿佛在暗示着什么，却又给不出明确的答案。
+
+突然，一阵强风吹过，卷起地上的落叶。在漫天飞舞的枯叶中，胡桃的目光变得凝重起来。她快步走向一棵歪斜的老树，蹲下身子仔细查看着什么。树干上有一道深深的划痕，像是被什么锋利的东西留下的。
+
+"有意思。"胡桃的手指轻轻抚过那道划痕，眉头微皱。"这痕迹很新，应该是最近几天留下的。"她站起身，环顾四周，"看来这里最近发生过什么有趣的事情呢。"
+
+一阵阴冷的风从山谷中吹来，带着一股说不清道不明的气息。胡桃的神情变得严肃起来，她轻声说道："我们该回去了。这里的气氛不太对劲，似乎有什么东西在注视着我们。"说完，她转身就要离开，却又突然停下脚步，回头看了一眼那道划痕，若有所思。
